# hanauta

./: .gitignore  .gitmodules  AGENTS.md  CAELESTIA-DOTS-SPECS.md  README.md  SKILLS.md  config  dunstrc  install.sh  main.py  nuitka-crash-report.xml  picom.conf  pyproject.toml  startup.sh  weather.city  weather.conf
hanauta/: PLUGINS.md  build-nuitka.sh  build-popup-widgets.sh  build-pyqt.sh  config.ini
hanauta/config/: bar-icons.example.json  dock.toml
hanauta/scripts/: alacritty-cava.toml  bitcoin.sh  build_i3lock_color.sh  cache_bar_services.py  cache_services_sections.py  caffeine.sh  cava_eww.sh  cava_overlay.sh  chpfp.sh  cover_colors.sh  dripshot  gamemode.sh  install_betterlockscreen.sh  install_silent_sddm.sh  install_theme_system.sh  install_volnoti.sh  lock  lockstatus.sh  microphone  mpris.sh  notifications-cache-daemon.sh  open_bar.sh  open_dock.sh  open_launcher.sh  open_wallpaper_manager.sh  phone_info.sh  pomodoro.sh  popup  run_matugen.sh  safe_i3_restart.sh  set_color_scheme.sh  set_theme.sh  set_wallpaper.sh  tray  updates  volume.sh  vpn.sh  vpn_bypass_helper.py  vpn_bypass_launcher.py  weather.sh  (+1 more)
hanauta/src/archive/lockscreen-x11-qml-experimental/: CMakeLists.txt
hanauta/src/archive/lockscreen-x11-qml-experimental/qml/: Center.qml  InputField.qml  MainAuth.qml  MainSaver.qml  theme.js
hanauta/src/archive/lockscreen-x11-qml-experimental/scripts/: install-xsecurelock-modules.sh  run-auth-debug.sh  run-auth-standalone.sh  run-saver-standalone.sh
hanauta/src/archive/lockscreen-x11-qml-experimental/src/: AuthBridge.cpp  AuthBridge.hpp  AuthWindow.cpp  AuthWindow.hpp  PamClient.cpp  PamClient.hpp  XSecurelockWindow.cpp  XSecurelockWindow.hpp  auth_main.cpp  saver_main.cpp
script/: switch-layouts
scripts/: Brightness  KeybindingsHelp  MediaControl  ScreenShoTer  SetSysVars  Volume  alt_tab.sh  clip.sh  close-hovered  colorpicker  enable-ssh.sh  jgmenu_desktop.sh  jgmenu_listener.sh  lock  openapps  reset_pointer_map.sh  sddm-fallback.sh  ss  ss.sh  start-eww-ui  switch-layouts  system.ini  window_switcher.py
(+249 files in other folders)
